unpackaged/main/default/objects/Case/fields/MLF_Day_Preference__c.field-meta.xml
<CustomField>
    <fullName>MLF_Day_Preference__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Day Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>Weekdays</fullName>
            </value>
            <value>
                <fullName>Weekends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>