unpackaged/main/default/objects/Case/fields/MLF_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>MLF_Engagement_Type__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provide a Meal</fullName>
            </value>
            <value>
                <fullName>Provide a Service</fullName>
            </value>
            <value>
                <fullName>Host an Event</fullName>
            </value>
            <value>
                <fullName>Greatest Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>