unpackaged/main/default/objects/Case/fields/MLF_Group_Age_Demographics__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Age_Demographics__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Age Demographics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adults</fullName>
            </value>
            <value>
                <fullName>Families</fullName>
            </value>
            <value>
                <fullName>Children 5-9 years old</fullName>
            </value>
            <value>
                <fullName>Children 10-13 years old</fullName>
            </value>
            <value>
                <fullName>Teens 14-17 years old</fullName>
            </value>
            <value>
                <fullName>All Ages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>