unpackaged/main/default/objects/Case/fields/MLF_Group_Day_Pref_Friday__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Day_Pref_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Day Pref - Friday</label>
    <type>Checkbox</type>
</CustomField>