unpackaged/main/default/objects/Case/fields/MLF_Group_Donation_Consideration__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Donation_Consideration__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Donation Consideration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>InKind</fullName>
                <label>In-Kind Donation Options</label>
            </value>
            <value>
                <fullName>Discussion Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>