unpackaged/main/default/objects/Case/fields/MLF_Group_Max_Attendees__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Max_Attendees__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Max Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>