unpackaged/main/default/objects/Case/fields/MLF_Group_Preferred_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Preferred_Timeframe__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Preferred Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>