unpackaged/main/default/objects/Case/fields/MLF_Group_Specific_Dates__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Specific_Dates__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Specific Dates</label>
    <length>200</length>
    <type>Text</type>
</CustomField>