unpackaged/main/default/objects/Case/fields/MLF_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>MLF_Group_Type__c</fullName>
    <description>MLF customization in 2025 for new Experience Cloud based Volunteer Portal. Populated from a Flow.</description>
    <label>MLF Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Church or Faith-Based Group</fullName>
            </value>
            <value>
                <fullName>Corporate Group</fullName>
            </value>
            <value>
                <fullName>Family Group</fullName>
            </value>
            <value>
                <fullName>Nonprofit / NGO</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>School, Summer Camp, or Youth Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>