unpackaged/main/default/objects/Case/listViews/MLF_Inquiry_Forms.listView-meta.xml
<ListView>
    <fullName>MLF_Inquiry_Forms</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.NAME</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>MLF Inquiry Forms</label>
</ListView>